# Super_Game_Motor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  generate-msvc-2019.bat  generate-msvc-2022.bat
editor/: CMakeLists.txt
editor/include/motor_editor/UI/: EditorUI.hpp
editor/src/: Editor.cpp  Editor.h  main.cpp
editor/src/scripts/: fact.lua  scr.lua  utils  vscode-debuggee.lua
engine/: CMakeLists.txt
engine/data/Objects/: BOTTLE.step
engine/include/Motor/Application/: Application.h
engine/include/Motor/Engine/: Core.h  Engine.h  Scene.h  Window.h
engine/include/Motor/Renderer/: Prerequisites.h  Renderer.h
engine/include/Motor/Renderer/RHI/: ConstantBuffer.h  DeviceContext.h  GraphicsEngine.h  IndexBuffer.h  PixelShader.h  RenderSystem.h  SwapChain.h  VertexBuffer.h  VertexMesh.h  VertexShader.h
engine/include/Motor/Renderer/Resource/: Material.h  Mesh.h  MeshManager.h  Resource.h  ResourceManager.h  Texture.h  TextureManager.h
engine/include/Motor/_old/: task_system.hpp
engine/include/Motor/_old/ECS/: Components.h  Scene.h
engine/include/Motor/_old/async/: resource.hpp
engine/include/Motor/_old/graphics/: Camera.h  CameraContainer.h  ConstantBuffer.h  DebugDraw.h  GameObject.h  Graphics.h  Mesh.h  Model.h  RenderableGameObject.h  Shaders.h  UpdatedModel.h  Vertex.h
engine/include/Motor/_old/keyboard/: KeyboardEvent.h
engine/include/Motor/_old/mouse/: MouseLayout.h
engine/include/Motor/_old/other/: COMException.h  DirectXIncludes.h  Display.h  Framework.h  Logs.h  MathHelper.h  StringHelper.h  Timer.h
engine/include/imfilebrowser/: imfilebrowser.hpp
engine/include/motor/: converters.hpp  task_system.hpp  utils.hpp
engine/include/motor/ECS/: Archive.hpp  CompRealization.h  ComponentSystems.h  Components.h  Entity.h  Factory.h  Scene.h  SceneHierarchy.h
engine/include/motor/RBS/: PublicDefine.h  StringOp.h  VectorPrinter.h
engine/include/motor/RBS/Alpha/: AlphaMemory.h
engine/include/motor/async/: resource.hpp
engine/include/motor/core_system/: console.hpp  core.hpp  display.hpp  input_device.hpp  logic.hpp
engine/include/motor/graphics/: Camera.h  CameraContainer.h  Color.h  ConstantBuffer.h  ConstantBufferTypes.h  FrustumCulling.h  GameObject.h  Graphics.h  IndexBuffer.h  Light.h  Mesh.h  MeshForComponents.h  Model.h  PointLightStruct.h  RenderableGameObject.h  SceneCamera.h  Shaders.h  Texture.h  UpdatedModel.h  Vertex.h  VertexBuffer.h
engine/include/motor/keyboard/: KeyboardLayout.h
engine/include/motor/mouse/: MouseEvent.h  MouseLayout.h
engine/include/motor/other/: AssetManager.hpp  COMException.h  Config.hpp  DirectXIncludes.h  Display.h  Framework.h  Instrumentor.h  Json.hpp  Logs.h  ModelLoader.h  Physics.hpp  Project.hpp  StringConverter.h  StringHelper.h  Timer.h
engine/include/motor/state_system/: state.hpp
engine/include/motor/task_system/: constants.hpp  thread_pool.hpp  tickable.hpp  ticker.hpp  timeline.hpp  timer.hpp
engine/include/motor/ui_system/: ui.hpp  ui_asset_viewer.hpp  ui_console.hpp  ui_loading.hpp  ui_project.hpp
engine/src/: imfilebrowser.cpp  main.cpp  old_main.cpp  utils.cpp
engine/src/Application/: Application.cpp
engine/src/Application/Win32/: Win32Application.cpp
engine/src/ECS/: CompRealization.cpp  ComponentSystems.cpp  Components.cpp  Entity.cpp  Factory.cpp  Scene.cpp  SceneHierarchy.cpp
engine/src/Engine/: Engine.cpp  GraphicsSystem.cpp  GraphicsSystem.h  Scene.cpp  Window.cpp
engine/src/Engine/Win32/: Win32Window.cpp
engine/src/RBS/: StringOp.cpp
engine/src/RBS/Alpha/: AlphaMemory.cpp
engine/src/RBS/Beta/: BetaNode.cpp  DummyTopNode.cpp  JoinNode.cpp  ProductionNode.cpp  ReteNode.cpp  TokenFilterNode.cpp
engine/src/RBS/ReteNet/: Net.cpp
engine/src/RBS/Structure/: Condition.cpp  Field.cpp  Token.cpp  Triples.cpp
engine/src/RBS/TestNode/: ParamTestNode.cpp  TestAtTokenFilterNode.cpp
engine/src/Renderer/RHI/: ConstantBuffer.cpp  DeviceContext.cpp  GraphicsEngine.cpp  IndexBuffer.cpp  PixelShader.cpp  RenderSystem.cpp  SwapChain.cpp  VertexBuffer.cpp  VertexShader.cpp
engine/src/Renderer/Resource/: Material.cpp  Mesh.cpp  MeshManager.cpp  Resource.cpp  ResourceManager.cpp  Texture.cpp  TextureManager.cpp
engine/src/Renderer/Shaders/: VertexMeshLayoutShader.hlsl
engine/src/_old/: imgui_iterator.inl  old_main.cpp  rapidjson.natvis
engine/src/_old/ECS/: Factory.cpp  Scene.cpp
engine/src/_old/graphics/: Camera.cpp  Color.cpp  DebugDraw.cpp  Graphics.cpp  Mesh.cpp  Shaders.cpp
engine/src/_old/mouse/: MouseLayout.cpp
engine/src/_old/other/: Framework.cpp  Logs.cpp  StringConverter.cpp  StringHelper.cpp  Timer.cpp
engine/src/_old/state_system/: state.cpp
engine/src/_old/ui_system/: ui_console.cpp
engine/src/converters/: converters.cpp  uconverters.cpp  wconverters.cpp
engine/src/core_system/: console.cpp  core.cpp  display.cpp  input_device.cpp  logic.cpp
engine/src/graphic/: Camera.cpp  GameObject.cpp  Graphics.cpp  Light.cpp  Mesh.cpp  Model.cpp  RanderableGameObject.cpp  Shaders.cpp  Texture.cpp  UpdatedModel.cpp
engine/src/graphics/: Camera.cpp  CameraContainer.cpp  Color.cpp  FrustumCulling.cpp  GameObject.cpp  Graphics.cpp  Light.cpp  Mesh.cpp  MeshForComponents.cpp  Model.cpp  RenderableGameObject.cpp  SceneCamera.cpp  Shaders.cpp  Texture.cpp  UpdatedModel.cpp
engine/src/keyboard/: KeyboardEvent.cpp  KeyboardLayout.cpp
engine/src/mouse/: MouseEvent.cpp  MouseLayout.cpp
engine/src/other/: AssetManager.cpp  Display.cpp  Framework.cpp  Logs.cpp  MathHelper.cpp  ModelLoader.cpp  Physics.cpp  Project.cpp  StringConverter.cpp  StringHelper.cpp  Timer.cpp
engine/src/shaders/pixel_shaders/: pixelshader.hlsl  pixelshader_nolight.hlsl
engine/src/shaders/vertex_shaders/: vertexshader.hlsl
engine/src/task_system/: thread_pool.cpp
engine/src/ui_system/: ui_asset_viewer.cpp  ui_console.cpp
engine/tests/: converters.cpp  debug_test.cpp  shared_resource.cpp
engine/tests/task_system/: ticker.cpp
lib/ImGuizmo-cmake/: CMakeLists.txt
lib/imgui-cmake/: CMakeLists.txt
lib/luasocket-cmake/: CMakeLists.txt
(+36 files in other folders)
